<resources>
    <string name="app_name">QMailer</string>
    <string name="COMPOSE">Compose</string>
    <string name="SUBJECT">Subject</string>
    <string name="RATE_US">Rate Us</string>
    <string name="SHARE">Share</string>
    <string name="EXIT">Exit</string>
    <string name="SEND">Send Email</string>
    <string name="MESSAGE">Compose mail here</string>
    <string name="BANNER_ADUNIT">ca-app-pub-3940256099942544/6300978111</string>
    <string name="SERVICES">Send message as</string>
    <string name="ANONYMOUS">Anonymous Email</string>
    <string name="EMAIL_ADS">Email Advertisement</string>
    <string name="DRAFT_EMAIL">Save as Draft</string>
    <string name="ANONYMOUS_EMAIL_WARNING">This tool is for surprise emails only, please don\'t misuse it</string>
    <string name="EMAIL_SAMPLE">example@email.com</string>
    <string name="ATTENTION">Attention</string>
    <string name="AD">Ad</string>
    <string name="USE_CUSTOM">Send Via My Gmail (optional)</string>
    <string name="AVAILABLE_EMAIL">Emails Available</string>
    <string name="REGION">Region</string>
    <string name="EMAILS_TO_SEND">Send to</string>
    <string name="GMAIL_EMAIL">Gmail Address</string>
    <string name="GMAIL_PASSWORD">Password</string>
    <string name="WHY_WE_NEED_YOUR_LOGIN">Why do we need your login?</string>
    <string name="WHAT_WE_DO_WITH_YOUR_LOGIN">QMailer does not save your login credentials\n\n(you need to disable two factor authentication if available).</string>
    <string name="ME">Me</string>
    <string name="SENT_BOX">Sent box</string>
    <string name="DRAFT">Draft</string>
    <string name="NO_EMAILS_LEFT">Oops, looks like you\'ve used us all your\nemails</string>
    <string name="BUY_TEN_EMAILS">10 Emails</string>
    <string name="BUY_FIFTY_EMAILS">50 Emails (+10 Free)</string>
    <string name="BUY_HUNDRED_EMAILS">100 Emails (+20 Free)</string>
    <string name="BUY_THOUSAND_EMAILS">1000 Emails (+100 Free)</string>
    <string name="BUY_EMAILS">Buy Emails</string>
    <string name="buy_10">$0.15</string>
    <string name="buy_20">$0.75</string>
    <string name="buy_30">$1.5</string>
    <string name="buy_40">$15</string>
    <string name="ONLY_AVAILABLE_TO_PREMIUM_USERS">Only Available to Premium Users</string>
    <string name="HOW_WE_USE_YOUR_GMAIL">How we use your gmail</string>
    <string name="email">qmailer@gmail.com</string>
    <string name="q">Q</string>
</resources>