<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:id="@+id/mainLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_margin="0dp"
            android:elevation="3dp"
            app:contentInsetStartWithNavigation="4dp"
            app:title="@string/COMPOSE"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:paddingTop="5dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="10dp"
                android:gravity="center_vertical"
                android:layout_gravity="start"
                android:background="@drawable/action_pannel"
                android:padding="5dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_qmailer"
                    android:layout_margin="5dp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="18sp"/>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|end">

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/attach"
                        android:layout_width="40dp"
                        android:layout_height="35dp"
                        android:src="@drawable/attachment"
                        android:padding="5dp"
                        android:background="@android:color/transparent"
                        android:tint="@color/white"/>

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/SUBJECT"
                android:inputType="text"
                android:padding="10dp"
                android:textColorHint="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:imeOptions="actionNone"
                android:singleLine="false"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@android:color/transparent"
                android:hint="@string/MESSAGE"
                android:inputType="text"
                android:padding="10dp"
                android:textColorHint="@color/black"
                android:textSize="18sp"
                android:imeOptions="actionNone"
                android:singleLine="false"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        app:adSize="BANNER"
        app:adUnitId="@string/BANNER_ADUNIT"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/dimLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#D9000000"
        android:clickable="true"
        android:fitsSystemWindows="true"
        android:focusable="true"
        android:onClick="hideBottomSheet"
        android:orientation="vertical"
        android:visibility="gone"/>

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/bottomSheet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            app:behavior_hideable="true"
            app:layout_behavior="@string/bottom_sheet_behavior"
            app:behavior_peekHeight="0dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/dialog_background"
                    android:orientation="vertical"
                    android:padding="10dp"
                    android:layout_gravity="center_horizontal|bottom"
                    android:paddingBottom="30dp"
                    android:gravity="center">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="10dp"
                        android:text="@string/SERVICES"
                        android:textColor="@color/black"
                        android:textStyle="bold"/>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/anonymousEmail"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/actionbtn_selector"
                        android:text="@string/ANONYMOUS"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:drawableStart="@drawable/secured_email"
                        android:drawablePadding="5dp"
                        android:paddingStart="30dp"
                        android:paddingEnd="30dp"/>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/emailAdvertisement"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/actionbtn_selector"
                        android:text="@string/EMAIL_ADS"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:drawableStart="@drawable/email_ads"
                        android:drawablePadding="5dp"
                        android:paddingStart="30dp"
                        android:paddingEnd="30dp"/>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/draftEmail"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/store_button_selector"
                        android:text="@string/DRAFT_EMAIL"
                        android:textAllCaps="false"
                        android:textColor="@color/black_80"/>

                </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>